--- a/LinearLightsOut/app/src/main/res/layout/activity_main.xml
+++ b/LinearLightsOut/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/yellow"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/gameButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/button0"
+            style="@style/LightButton"
+            android:tag="0"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/button1"
+            style="@style/LightButton"
+            android:tag="1"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/button2"
+            style="@style/LightButton"
+            android:tag="2"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/button3"
+            style="@style/LightButton"
+            android:tag="3"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/button4"
+            style="@style/LightButton"
+            android:tag="4"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/button5"
+            style="@style/LightButton"
+            android:tag="5"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/button6"
+            style="@style/LightButton"
+            android:tag="6"
+            android:text="0"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/gameStateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/gameButtons"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:text="@string/label_start"
+        android:textSize="22sp"/>
+
+    <Button
+        android:id="@+id/newGameButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@id/gameButtons"
+        android:layout_below="@id/gameButtons"
+        android:layout_marginTop="10dp"
+        android:onClick="pressedNewGame"
+        android:text="@string/new_game"/>
+
+</RelativeLayout>
